@@ -1952,6 +1952,7 @@ int idleWaveFlag(BoardData* bd)
 	float elapsedTime = (float)(get_time() - animStartTime);
 	bd->flagWaved = elapsedTime / 200;
 	updateFlagOccPos(bd);
+	RestrictiveDrawFlag(bd);
 	return 1;
 }
 
@@ -1971,7 +1972,7 @@ void ShowFlag3d(BoardData *bd)
 	waveFlag(bd, 0);
 	updateFlagOccPos(bd);
 
-	RestrictiveRedraw();
+	RestrictiveDrawFlag(bd);
 }
 
 int idleCloseBoard(BoardData* bd)
