@@ -339,8 +339,6 @@ extern void update_pipcount ( BoardData *bd, gint points[ 2 ][ 25 ] );
 extern void write_board ( BoardData *bd, int anBoard[ 2 ][ 25 ] );
 extern void board_beep( BoardData *bd );
 extern void Confirm( BoardData *bd );
-extern int ForcedMove ( int anBoard[ 2 ][ 25 ], int anDice[ 2 ] );
-extern int GreadyBearoff ( int anBoard[ 2 ][ 25 ], int anDice[ 2 ] );
 extern int update_move(BoardData *bd);
 extern gboolean place_chequer_or_revert(BoardData *bd, int dest);
 extern gboolean LegalDestPoints( BoardData *bd, int iDestPoints[4] );
