@@ -1,3 +1,6 @@
+Tue Jan 27 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* drawboard3d.c, misc3d.c: 3d quick draw flag waving code
 
 Wed Jan 21 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
