@@ -1,3 +1,7 @@
+Tue Jan 27 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* gtkboard.c, gtkprefs.c: Some more 3d quick draw code
+
 Mon Jan 26 19:24:34 2004  Joern Thyssen  <jth@gnubg.org>
 
 	NetBSD compilation fixes by Adrian Bunk.
